# axum-graceful-shutdown-example

./: .env.example  Cargo.toml  Dockerfile  build.sh  docker-compose.yaml
migrations/: 20231216024440_init.sql
src/: lib.rs  main.rs
src/api/: mod.rs  structs.rs  v0.rs
src/data/: Cargo.toml
src/routes/: always_errors.rs  custom_json_extractor.rs  get_json.rs  index.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  returns_201.rs  set_middleware_custom_header.rs  shared_data.rs  validate_with_serde.rs
